add_subdirectory(Components)
add_subdirectory(Systems)

set(SOURCES
    ${SOURCES}
    ${CMAKE_CURRENT_SOURCE_DIR}/Component.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Component.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ECSTypes.h
    ${CMAKE_CURRENT_SOURCE_DIR}/EntityManager.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/EntityManager.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Entity.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Entity.h
    ${CMAKE_CURRENT_SOURCE_DIR}/EntityBuilder.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/EntityBuilder.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Family.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Family.h
    ${CMAKE_CURRENT_SOURCE_DIR}/System.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/System.h
    PARENT_SCOPE
)
