add_subdirectory(World)

set(SOURCES
    ${SOURCES}
    ${CMAKE_CURRENT_SOURCE_DIR}/Scene2D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Scene2D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Scene3D.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Scene3D.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Scene.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Scene.h
    PARENT_SCOPE
)
