add_subdirectory(base)
add_subdirectory(buffer)
add_subdirectory(command)
add_subdirectory(descriptor)
add_subdirectory(device)
add_subdirectory(image)
add_subdirectory(pipeline)
add_subdirectory(surface)

set(SOURCES
    ${SOURCES}
    ${CMAKE_CURRENT_SOURCE_DIR}/DebugReportCallback.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/DebugReportCallback.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Event.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Event.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Fence.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Fence.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Framebuffer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Framebuffer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Instance.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Instance.h
    ${CMAKE_CURRENT_SOURCE_DIR}/QueryPool.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/QueryPool.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Queue.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Queue.h
    ${CMAKE_CURRENT_SOURCE_DIR}/RenderPass.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/RenderPass.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Sampler.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Sampler.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Semaphore.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Semaphore.h
    ${CMAKE_CURRENT_SOURCE_DIR}/ShaderModule.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ShaderModule.h
    PARENT_SCOPE
)
